# Movie-Recommender

./: CMakeLists.txt  DataParser.cpp  DataParser.hpp  DisplayStrategy.cpp  DisplayStrategy.hpp  MediaStructure.cpp  MediaStructure.hpp  OGMovieData.csv  README.md  baseTest.hpp  dispTest.hpp  main.cpp  unit_test.cpp
